@@ -1,3 +1,7 @@
+Jan 21, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
+- highly experimental: optionally use DT_AUXILIARY stub libraries to not depend
+  on libGeoIP and libgdk_pixbuf at runtime
+
 Jan 12, 2005: Ludwig Nussel <l-n@users.sourceforge.net>
 - split get_new_defaults into game specific functions
 - fix doom3 protocol detection (#1092165)
